--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ subjects:
 - !lcc 'AP'
 - !lcsh 'United States -- Politics and government -- 19th century -- Periodicals'
 - !lcsh 'Literature, Modern -- 19th century -- Periodicals'
+- GITenberg
 title: The Continental Monthly, Vol. 1, No. 3, March, 1862
 url: http://www.gutenberg.org/ebooks/14583
